--- a/rrr.html
+++ b/rrr.html
@@ -12,9 +12,9 @@
     </head>
     <body>
     
-        <h1>JAPÓN</h1>
-        <h2>Tokio</h2>
-       <p>Tokio es la capital de japón.<br>Su área metropolitana posee <strong> 36 millones de habitantes</strong> de habitantes en <em>2011.</em>
+        <h1>ESPAÑA</h1>
+        <h2>Madrid</h2>
+       <p>Madrid es la capital de España.<br>España posee <strong> 48,37 millones de habitantes</strong> en <em>2024.</em>
         
         <br> Ciudades de <a href="https://es.wikipedia.org/wiki/Jap%C3%B3n">japón </a>.
          <ul>
